commit 12/05